Change the cache key

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -38,7 +38,7 @@ jobs:
       id: cache
       with:
         path: '~/.nuget/packages'
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+        key: cache-${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
 
     - name: NuGet Restore
       if: steps.cache.outputs.cache-hit != 'true'
